# Coursework_6

./: .gitignore  pyproject.toml  sandbox.py
config/: settings.py  urls.py
newsletter_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
newsletter_app/migrations/: 0003_alter_newsletter_time.py  0004_newsletter_client.py  0005_massage.py  0006_logs.py  0007_alter_logs_options.py  0008_client_user_newsletter_user_and_more.py  0009_alter_massage_newsletter.py  0010_remove_massage_newsletter_massage_newsletter.py  0011_remove_newsletter_client_newsletter_client.py  0012_remove_newsletter_client_client_newsletter.py  0013_remove_client_newsletter_newsletter_client.py  0014_remove_newsletter_client_newsletter_client.py  0015_remove_newsletter_client_newsletter_client.py  0016_remove_newsletter_client_newsletter_client.py  0017_remove_massage_newsletter_remove_newsletter_client_and_more.py
newsletter_app/templates/newsletter_app/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  logs_confirm_delete.html  logs_detail.html  logs_form.html  logs_list.html  massage_confirm_delete.html  massage_detail.html  massage_form.html  massage_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_name_user_phone_and_more.py
users/templates/users/: login.html  register.html  user_form.html  verified.html
(+2 files in other folders)
